week2/main/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main
  name: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: files-claim
      containers:
        - name: main-reader
          image: juslesan/main-reader
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
        - name: main-writer
          image: juslesan/main-writer
          volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/files
