week2/main/manifests/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: main
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
