week2/main/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: main
  name: main-response-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /main
        backend:
          serviceName: main-svc
          servicePort: 2345
